error fixed on mobile

--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -118,7 +118,8 @@
 
 @media (max-width: 576px) {
   .buttonNotPushed-char {
-    width: 100px;
+    color: black;
+    width: 110px;
     height: 40px;
     font-family: "Bebas Neue", cursive;
     background-color: whitesmoke;
@@ -133,10 +134,11 @@
   }
 
   .buttonPushed-char {
+    color: black;
     box-shadow: 2px 8px 4px -6px hsla(0, 0%, 0%, 0.3);
     cursor: pointer;
     border: 4px solid#424242;
-    width: 100px;
+    width: 110px;
     height: 40px;
     font-family: "Bebas Neue", cursive;
     background-color: whitesmoke;
@@ -148,7 +150,8 @@
     border-bottom-left-radius: 15px 255px;
   }
   .buttonNotPushed-com {
-    width: 100px;
+    color: black;
+    width: 110px;
     height: 40px;
     font-family: "Bebas Neue", cursive;
     background-color: whitesmoke;
@@ -162,10 +165,11 @@
   }
 
   .buttonPushed-com {
+    color: black;
     box-shadow: 2px 8px 4px -6px hsla(0, 0%, 0%, 0.3);
     cursor: pointer;
     border: 4px solid#424242;
-    width: 100px;
+    width: 110px;
     height: 40px;
     font-family: "Bebas Neue", cursive;
     background-color: whitesmoke;
@@ -178,7 +182,8 @@
   }
 
   .buttonNotPushed-fav {
-    width: 100px;
+    color: black;
+    width: 110px;
     height: 40px;
     font-family: "Bebas Neue", cursive;
     background-color: whitesmoke;
@@ -192,10 +197,11 @@
   }
 
   .buttonPushed-fav {
+    color: black;
     box-shadow: 2px 8px 4px -6px hsla(0, 0%, 0%, 0.3);
     cursor: pointer;
     border: 4px solid#424242;
-    width: 100px;
+    width: 110px;
     height: 40px;
     font-family: "Bebas Neue", cursive;
     background-color: whitesmoke;
